Add icons&compinfo (#1348)
* add icons, premium request

* add componentinfo

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,30 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+graph89:
+  - com.eanema.graph89/com.graph89.emulationcore.EmulatorActivity
+
+summit_credit_union:
+  - com.summitcreditunion.digital/com.lumindigital.MainActivity
+
+anikku:
+  - app.anikku.beta/eu.kanade.tachiyomi.ui.main.MainActivityDefault
+
+graphie:
+  - com.pavelrekun.graphie/com.pavelrekun.graphie.navigation.NavigationActivity
+
+pangolin:
+  - net.pangolin.Pangolin/net.pangolin.Pangolin.MainActivity
+
+rereminder:
+  - com.olaf.rereminder/com.olaf.rereminder.MainActivity
+
+qksms:
+  - dev.octoshrimpy.quik.fdroid/dev.octoshrimpy.quik.feature.main.MainActivity
+
+easy_notes:
+  - me.easyapps.easynotes/com.kin.easynotes.presentation.MainActivity
+
+sprinti:
+  - hannover.rider/via.rider.activities.MapActivityKt
