--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,14 @@ easy_notes:
 
 sprinti:
   - hannover.rider/via.rider.activities.MapActivityKt
+
+xlife:
+  - com.blackbees.xlife/com.blackbees.xlife.activity.SplashActivity
+
+birthday_adapter:
+  - org.birthdayadapter/org.birthdayadapter.ui.BaseActivity
+  - org.birthdayadapter/fr.heinisch.birthdayadapter.ui.BaseActivity
+
+yono_sbi:
+  - com.sbi.lotusintouch/com.sbi.lotusintouch.MainActivity
+  - com.sbi.lotusintouch/com.sbi.yono.MainActivity
