--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,15 @@ easy_notes:
 
 sprinti:
   - hannover.rider/via.rider.activities.MapActivityKt
+
+camera:
+  - com.motorola.camera5/com.motorola.camera.Camera
+
+byedpi:
+  - io.github.romanvht.byedpi/io.github.romanvht.byedpi.activities.MainActivity
+
+yandex_go:
+  - ru.yandex.taxi/com.yandex.go.activity.alias.NewYear2026MainActivityAlias
+
+zalith_launcher:
+  - com.movtery.zalithlauncher.v2/com.movtery.zalithlauncher.ui.activities.SplashActivity
