--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -51,3 +51,8 @@ yandex_go:
 
 zalith_launcher:
   - com.movtery.zalithlauncher.v2/com.movtery.zalithlauncher.ui.activities.SplashActivity
+
+delta_alt_4:
+  - website.leifs.delta.fossdc/website.leifs.delta.activities.MainActivity
+  - website.leifs.delta.fossdc/website.leifs.delta.activities.SplashActivity
+  - website.leifs.delta.fossdc/website.leifs.delta.activities.StartActivity
