dynamic clock production build & compinfos (#1350)
* add compinfos

* add dynamic clock build to production

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -40,6 +40,23 @@ easy_notes:
 sprinti:
   - hannover.rider/via.rider.activities.MapActivityKt
 
+camera:
+  - com.motorola.camera5/com.motorola.camera.Camera
+
+byedpi:
+  - io.github.romanvht.byedpi/io.github.romanvht.byedpi.activities.MainActivity
+
+yandex_go:
+  - ru.yandex.taxi/com.yandex.go.activity.alias.NewYear2026MainActivityAlias
+
+zalith_launcher:
+  - com.movtery.zalithlauncher.v2/com.movtery.zalithlauncher.ui.activities.SplashActivity
+
+delta_alt_4:
+  - website.leifs.delta.fossdc/website.leifs.delta.activities.MainActivity
+  - website.leifs.delta.fossdc/website.leifs.delta.activities.SplashActivity
+  - website.leifs.delta.fossdc/website.leifs.delta.activities.StartActivity
+
 xlife:
   - com.blackbees.xlife/com.blackbees.xlife.activity.SplashActivity
 
