feat: add componentinfo
Added componentinfo for apps: Jump Jerboa, My Fairphone, Orna, Orna (alt 1), Stario launcher

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -67,3 +67,17 @@ birthday_adapter:
 yono_sbi:
   - com.sbi.lotusintouch/com.sbi.lotusintouch.MainActivity
   - com.sbi.lotusintouch/com.sbi.yono.MainActivity
+
+my_fairphone:
+  - com.fairphone.myfairphone/com.fairphone.presentation.ui.activity.MainActivity
+
+jump_jerboa:
+  - com.chinykian.jumpjerboa/com.chinykian.jumpjerboa.RunnerActivity
+
+orna:
+  - playorna.com.orna/playorna.com.orna.Index
+
+orna_alt_1: {}
+
+stario:
+  - com.stario.launcher/com.stario.launcher.activities.launcher.Launcher
