update icon: Graph89 + (alt)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,6 +16,8 @@
 graph89:
   - com.eanema.graph89/com.graph89.emulationcore.EmulatorActivity
 
+graph89_alt_1: {}
+
 summit_credit_union:
   - com.summitcreditunion.digital/com.lumindigital.MainActivity
 
