i didn't save duh

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -82,7 +82,7 @@ orna_alt_1: {}
 stario:
   - com.stario.launcher/com.stario.launcher.activities.launcher.Launcher
 
-anchor:
+anchor_notes:
   - com.zhfahim.anchor/com.zhfahim.anchor.MainActivity
 
 comine:
