new icon: iQOO Store

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -83,3 +83,6 @@ orna_alt_1: {}
 
 stario:
   - com.stario.launcher/com.stario.launcher.activities.launcher.Launcher
+
+iqoo_store:
+  - com.iqoo.website.gp/com.vivo.website.activity.SplashActivity
