--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,6 +16,8 @@
 graph89:
   - com.eanema.graph89/com.graph89.emulationcore.EmulatorActivity
 
+graph89_alt_1: {}
+
 summit_credit_union:
   - com.summitcreditunion.digital/com.lumindigital.MainActivity
 
@@ -81,6 +83,9 @@ orna_alt_1: {}
 
 stario:
   - com.stario.launcher/com.stario.launcher.activities.launcher.Launcher
+
+iqoo_store:
+  - com.iqoo.website.gp/com.vivo.website.activity.SplashActivity
 
 anchor_notes:
   - com.zhfahim.anchor/com.zhfahim.anchor.MainActivity
