Add lots of icons (#1354)
* add Frank insurance

* Add My NDIS

* Add NXP taginfo and tagwriter

* Add thangs

* Add Goodsam Responder

* Add quinn

* Add luxdelux frequencygenerator

* Add petrolspy

* Add ausphonetowers

* Fix Quinn png size

* Add padding to svgs

* fix icons

* fix petrolspy

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,33 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+my_ndis:
+  - au.gov.ndis.dbresults.myndis/au.gov.ndis.dbresults.myndis.MainActivity
+
+frank:
+  - au.com.frankhealthinsurance.app/crc64d58836315e07d2db.MainActivity
+
+nxp_taginfo:
+  - com.nxp.taginfolite/com.nxp.taginfo.activities.MainView
+
+nxp_tagwriter:
+  - com.nxp.nfc.tagwriter/com.nxp.nfc.tagwriter.activities.WelcomeScreen
+
+thangs:
+  - com.thangs.mobile/com.thangs.mobile.MainActivity
+
+goodsam_responder:
+  - com.goodsam.responder/com.goodsam.responder.EntryPage
+
+quinn:
+  - com.quinn.android/com.quinn.android.MainActivity
+
+frequencygenerator:
+  - com.luxdelux.frequencygenerator/com.luxdelux.frequencygenerator.activity.LauncherActivity
+
+petrolspy:
+  - com.pineconesoft.petrolspy/com.pineconesoft.petrolspy.MainActivity
+
+ausphonetowers:
+  - au.com.bitbot.phonetowers/au.com.bitbot.phonetowers.MapsActivity
