new compinfos and an icon from Walter

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,21 @@ petrolspy:
 
 ausphonetowers:
   - au.com.bitbot.phonetowers/au.com.bitbot.phonetowers.MapsActivity
+
+durham_waste:
+  - net.recollect.durham/com.routeware.mobile_oscar.MainActivity
+
+eggtimer:
+  - ca.eggs.eggtimer/ca.eggs.eggtimer.MainActivity
+
+goodable:
+  - com.goodablenews/com.goodablenews.MainActivity
+
+kde_connect:
+  - org.kde.kdeconnect_tp/org.kde.kdeconnect.ui.MainActivity
+
+tunnelbear:
+  - com.tunnelbear.android/com.tunnelbear.android.MainActivity
+
+mary_browns:
+  - com.smoothpay.MaryBrowns/com.smoothpay.smoothpay.Activities.Welcome.SplashScreen
