new icon: VNeID

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -60,3 +60,6 @@ tunnelbear:
 
 mary_browns:
   - com.smoothpay.MaryBrowns/com.smoothpay.smoothpay.Activities.Welcome.SplashScreen
+
+vneid:
+  - com.vnid/com.vnid.MainActivity
