new icon: AadhaarBAS

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,6 @@ vneid:
 
 maplestory_idle_rpg:
   - com.nexon.ma/com.nexon.ma.MainActivity
+
+aadhaarbas:
+  - com.aebas.aebas_client/com.aebas.aebas_client.MainActivityLaunch
