--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -81,3 +81,9 @@ katwarn:
 
 curve:
   - com.imaginecurve.curve.prd/com.curve.startup.launch.LaunchActivity
+
+castafiore:
+  - com.sawyerf.castafiore/com.sawyerf.castafiore.MainActivity
+
+florid:
+  - com.nahnah.florid/com.nahnah.florid.MainActivity
