--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -87,3 +87,6 @@ castafiore:
 
 florid:
   - com.nahnah.florid/com.nahnah.florid.MainActivity
+
+find_my_device:
+  - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
