Add icons&compinfo (#1356)
* add icons, premium requests

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -69,3 +69,24 @@ maplestory_idle_rpg:
 
 aadhaarbas:
   - com.aebas.aebas_client/com.aebas.aebas_client.MainActivityLaunch
+
+wsecu:
+  - com.wsecu.retail/com.backbase.modelbank.retailbankingapp.RetailActivity
+
+katretter:
+  - de.combirisk.KATRETTER/de.combirisk.KATRETTER.MainActivity
+
+katwarn:
+  - de.combirisk.katwarn/de.combirisk.katwarn.MainActivity
+
+curve:
+  - com.imaginecurve.curve.prd/com.curve.startup.launch.LaunchActivity
+
+castafiore:
+  - com.sawyerf.castafiore/com.sawyerf.castafiore.MainActivity
+
+florid:
+  - com.nahnah.florid/com.nahnah.florid.MainActivity
+
+find_my_device:
+  - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
