--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,21 @@ florid:
 
 find_my_device:
   - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
+
+8-bit_wonders:
+  - de.rainerhock.eightbitwonders/de.rainerhock.eightbitwonders.MainActivity
+
+jconnect_mobile:
+  - com.dwidasa.bjtm.mb.android/com.dwidasa.bjtm.mb.android.activity.StartUpActivity
+
+e-albania:
+  - al.ealbania.app/crc64de3bc257f405f3bf.SplashActivity
+
+preply:
+  - com.preply/com.preply.MainActivity
+
+sms_virtual:
+  - online.smsvirtual.app/online.smsvirtual.app.ui.MainActivity
+
+old_wild_west:
+  - com.tcpos.oldwildwest/com.owwapp.LaunchActivity
