Fix typo in icon entry for 8-bit wonders

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,7 +91,7 @@ florid:
 find_my_device:
   - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
 
-8-bit_wonders:
+_8-bit_wonders:
   - de.rainerhock.eightbitwonders/de.rainerhock.eightbitwonders.MainActivity
 
 jconnect_mobile:
