--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,13 +91,13 @@ florid:
 find_my_device:
   - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
 
-_8-bit_wonders:
+_8_bit_wonders:
   - de.rainerhock.eightbitwonders/de.rainerhock.eightbitwonders.MainActivity
 
 jconnect_mobile:
   - com.dwidasa.bjtm.mb.android/com.dwidasa.bjtm.mb.android.activity.StartUpActivity
 
-e-albania:
+e_albania:
   - al.ealbania.app/crc64de3bc257f405f3bf.SplashActivity
 
 preply:
