add Brother Mobile Connect

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -108,3 +108,6 @@ sms_virtual:
 
 old_wild_west:
   - com.tcpos.oldwildwest/com.owwapp.LaunchActivity
+
+brother_mobile_connect:
+  - com.brother.mfc.mobileconnect/com.brother.mfc.mobileconnect.view.EntryActivity
