updated ComponentInfo for existing icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,15 @@ florid:
 
 find_my_device:
   - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
+
+forte:
+  - kz.forte.bank/com.forte.ForteSingleActivity
+
+kaspi:
+  - kz.kaspi.mobile/kz.kaspi.mobile.activity.KaspiKzActivity
+
+thunderbird:
+  - net.thunderbird.android/com.fsck.k9.activity.MainActivity
+
+olx:
+  - kz.slando/pl.tablica2.app.startup.activity.StartupActivity
