Add Icons&compinfo (#1357)
* add icons

added: 8-bit wonders, e-albania, old wild west, preply, sms virtual, jconnect mobile

* add Compinfo

added compinfo for apps: 8-bit wonders, e-albania, jconnect mobile, old wild west, preply, sms virtual

* add underscore

* rename

* Fix typo in icon entry for 8-bit wonders

* correct underscore

* correct underscore

* add corrected files

Jconnect mobile: center icon
Old Wild West: center text
Preply: center icon
SMS virtual: remove gradient (I'll miss it... :<)

* add custom actegory section

I thought that the suggestion that @flameshikari gave me on Discord was pretty important for newcomers, so I tried adding it in the contribs. Hope this doesn't disrupt anything too big.

Here is the original message link: `https://discord.com/channels/743783969216135198/1075048045084934155/1467493888187961502`

* re-add all files to be sure

seems like I was uploading files from the wrong folder ALL THE TIME. Sorry, I feel dumb right now I shouldn't make such mistakes

* Delete contribs/icons/e-albania.png

* Delete contribs/icons/e-albania.svg

* correct resize

make icons 176x176, not 177x177

* turn - into _

* add Brother Mobile Connect

* add Brother Mobile connect

just got a printer and had to install this app, at least I want it skinned :>

* remove hidden unicode characters

* fix icons

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,6 +91,27 @@ florid:
 find_my_device:
   - de.nulide.findmydevice.edge/de.nulide.findmydevice.ui.MainActivity
 
+_8_bit_wonders:
+  - de.rainerhock.eightbitwonders/de.rainerhock.eightbitwonders.MainActivity
+
+jconnect_mobile:
+  - com.dwidasa.bjtm.mb.android/com.dwidasa.bjtm.mb.android.activity.StartUpActivity
+
+e_albania:
+  - al.ealbania.app/crc64de3bc257f405f3bf.SplashActivity
+
+preply:
+  - com.preply/com.preply.MainActivity
+
+sms_virtual:
+  - online.smsvirtual.app/online.smsvirtual.app.ui.MainActivity
+
+old_wild_west:
+  - com.tcpos.oldwildwest/com.owwapp.LaunchActivity
+
+brother_mobile_connect:
+  - com.brother.mfc.mobileconnect/com.brother.mfc.mobileconnect.view.EntryActivity
+
 forte:
   - kz.forte.bank/com.forte.ForteSingleActivity
 
