add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -123,3 +123,15 @@ thunderbird:
 
 olx:
   - kz.slando/pl.tablica2.app.startup.activity.StartupActivity
+
+animal_crossing_pocket_camp_c:
+  - com.nintendo.zasa/com.snslinkage.dena.snslinkageunityplugin.SnsLinkageSafeUnityPlayerNativeActivity
+
+oneyou_icon_pack:
+  - com.pashapuma.oneyou.themed/com.pashapuma.oneyou.themed.activities.MainActivity
+
+anything_llm:
+  - com.anythingllm/com.anythingllm.MainActivity
+
+souper_game:
+  - com.SinBeansStudio.SouperGame/com.unity3d.player.UnityPlayerActivity
