--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -135,3 +135,12 @@ anything_llm:
 
 souper_game:
   - com.SinBeansStudio.SouperGame/com.unity3d.player.UnityPlayerActivity
+
+g_reminders:
+  - com.html.greminder/com.html.greminder.OnboardingActivity
+
+ionos:
+  - com.oneandone.ciso.mobile.app.android/com.oneandone.ciso.mobile.app.android.authentication.ui.SplashScreenActivity
+
+med_foss:
+  - com.fedeveloper95.med/com.fedeveloper95.med.WelcomeActivity
