--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -144,3 +144,9 @@ ionos:
 
 med_foss:
   - com.fedeveloper95.med/com.fedeveloper95.med.WelcomeActivity
+
+mullvad_vpn:
+  - net.mullvad.mullvadvpn/net.mullvad.mullvadvpn.ui.obfuscation.MainActivityAltDefault
+
+thunderbird_beta:
+  - net.thunderbird.android.beta/net.thunderbird.app.common.MainActivity
