Add icons&compinfo (#1360)
* add icons, premium requests

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -123,3 +123,30 @@ thunderbird:
 
 olx:
   - kz.slando/pl.tablica2.app.startup.activity.StartupActivity
+
+animal_crossing_pocket_camp_c:
+  - com.nintendo.zasa/com.snslinkage.dena.snslinkageunityplugin.SnsLinkageSafeUnityPlayerNativeActivity
+
+oneyou_icon_pack:
+  - com.pashapuma.oneyou.themed/com.pashapuma.oneyou.themed.activities.MainActivity
+
+anything_llm:
+  - com.anythingllm/com.anythingllm.MainActivity
+
+souper_game:
+  - com.SinBeansStudio.SouperGame/com.unity3d.player.UnityPlayerActivity
+
+g_reminders:
+  - com.html.greminder/com.html.greminder.OnboardingActivity
+
+ionos:
+  - com.oneandone.ciso.mobile.app.android/com.oneandone.ciso.mobile.app.android.authentication.ui.SplashScreenActivity
+
+med_foss:
+  - com.fedeveloper95.med/com.fedeveloper95.med.WelcomeActivity
+
+mullvad_vpn:
+  - net.mullvad.mullvadvpn/net.mullvad.mullvadvpn.ui.obfuscation.MainActivityAltDefault
+
+thunderbird_beta:
+  - net.thunderbird.android.beta/net.thunderbird.app.common.MainActivity
