add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+interval_timer_tabata_timer:
+  - com.interval.timer.workout.tabata.hiit.free/com.digitalchemy.interval.timer.feature.main.MainActivity
+
+sams_club:
+  - com.rfi.sams.android/com.walmart.glass.integration.splash.SplashActivity
+
+shift_actions:
+  - eco.shift.apps.actions/eco.shift.apps.actions.MainActivity
+
+shift_camera:
+  - eco.shift.camera/com.android.camera.CameraLauncher
+
+shift_gallery:
+  - eco.shift.apps.glimpse/org.lineageos.glimpse.MainActivity
+
+shift_music:
+  - eco.shift.apps.twelve/org.lineageos.twelve.MainActivity
+
+woodforest_mobile_banking:
+  - com.woodforest/crc649fe55323ce595753.MainActivity
