--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ shift_music:
 
 woodforest_mobile_banking:
   - com.woodforest/crc649fe55323ce595753.MainActivity
+
+famila_nordost:
+  - de.bela.mobile.familago/de.bela.mobile.familago.MainActivity
