Add 8 app icons
- AEON Wallet
- Biccamera
- iAEON
- ICOCA
- TOKAI STATION POINT
- wesmo!
- WESPO
- WESTER

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,28 @@ woodforest_mobile_banking:
 
 famila_nordost:
   - de.bela.mobile.familago/de.bela.mobile.familago.MainActivity
+
+aeon_wallet:
+  - today.wander.acs/my.com.softspace.posh.SSPoshMainActivity
+  - jp.co.aeon.credit.android.wallet/jp.co.aeon.credit.android.wallet.MainActivity
+
+biccamera:
+  - com.biccamera.android.mobile/com.biccamera.ui.LauncherActivity
+
+iaeon:
+  - jp.co.aeonst.app.myaeon/jp.co.aeonst.app.myaeon.MainActivity
+
+icoca:
+  - jp.co.westjr.android.icocaapp/crc64fa0dbc8111ab4fb7.MainActivity
+
+tokai_station_point:
+  - jp.co.jr_central.tokaistationpoint/jp.co.jr_central.tokaistationpoint.screens.splash.SplashActivity
+
+wesmo:
+  - jp.co.westjr.wesmo/jp.co.westjr.wesmo.ui.splash.SplashActivity
+
+wespo:
+  - jp.co.westjr.wespo/jp.co.westjr.wespo.activity.SplashActivity
+
+wester:
+  - jp.co.westjr.wester/jp.co.westjr.wester.presentation.splash.SplashActivity
