add colonist icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ woodforest_mobile_banking:
 
 famila_nordost:
   - de.bela.mobile.familago/de.bela.mobile.familago.MainActivity
+
+colonist:
+  - com.colonist.colonist/com.colonist.colonist.MainActivity
