--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,6 @@ famila_nordost:
 
 colonist:
   - com.colonist.colonist/com.colonist.colonist.MainActivity
+
+et_app:
+  - com.edinburghtrams/com.discoverpassenger.LaunchActivity
