add smarty icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,6 @@ colonist:
 
 et_app:
   - com.edinburghtrams/com.discoverpassenger.LaunchActivity
+
+smarty:
+  - com.hutchison3g.sundae/com.hutchison3g.sundae.MainActivity
