Add 3 new icons (#1362)
* update ComponentInfo for Octopus Energy

* add colonist icon

* add et icon

* add smarty icon

* update contributors.xml

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -34,6 +34,15 @@ woodforest_mobile_banking:
 famila_nordost:
   - de.bela.mobile.familago/de.bela.mobile.familago.MainActivity
 
+colonist:
+  - com.colonist.colonist/com.colonist.colonist.MainActivity
+
+et_app:
+  - com.edinburghtrams/com.discoverpassenger.LaunchActivity
+
+smarty:
+  - com.hutchison3g.sundae/com.hutchison3g.sundae.MainActivity
+  
 aeon_wallet:
   - today.wander.acs/my.com.softspace.posh.SSPoshMainActivity
   - jp.co.aeon.credit.android.wallet/jp.co.aeon.credit.android.wallet.MainActivity
