add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -67,3 +67,18 @@ wespo:
 
 wester:
   - jp.co.westjr.wester/jp.co.westjr.wester.presentation.splash.SplashActivity
+
+frameo:
+  - net.frameo.app/net.frameo.app.ui.activities.AGalleryPicker
+
+icondo:
+  - com.icondo/com.icondo.view.splashscreen.SplashActivity
+
+kagi_translate:
+  - com.kagi.translate/com.kagi.translate.MainActivity
+
+origin_energy:
+  - com.originmobileapp/com.originmobileapp.SplashActivity
+
+tomb_raider:
+  - com.feralinteractive.tombraider_android/com.feralinteractive.tombraider_android.MainActivity
