--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -82,3 +82,12 @@ origin_energy:
 
 tomb_raider:
   - com.feralinteractive.tombraider_android/com.feralinteractive.tombraider_android.MainActivity
+
+florae:
+  - cat.naval.florae/cat.naval.florae.MainActivity
+
+pixel_station:
+  - com.studios.pixelstation/com.studios.pixelstation.MainActivity
+
+transcriber_for_whatsapp:
+  - it.mirko.transcriber/it.mirko.transcriber.features.history.HistoryActivity
