--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,3 +91,6 @@ pixel_station:
 
 transcriber_for_whatsapp:
   - it.mirko.transcriber/it.mirko.transcriber.features.history.HistoryActivity
+
+netto_plus:
+  - com.valuephone.vpnetto/de.netto.b2c.FragmentActivity
