Add icons&compinfo (#1364)
* add icons, premium requests

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -67,3 +67,30 @@ wespo:
 
 wester:
   - jp.co.westjr.wester/jp.co.westjr.wester.presentation.splash.SplashActivity
+
+frameo:
+  - net.frameo.app/net.frameo.app.ui.activities.AGalleryPicker
+
+icondo:
+  - com.icondo/com.icondo.view.splashscreen.SplashActivity
+
+kagi_translate:
+  - com.kagi.translate/com.kagi.translate.MainActivity
+
+origin_energy:
+  - com.originmobileapp/com.originmobileapp.SplashActivity
+
+tomb_raider:
+  - com.feralinteractive.tombraider_android/com.feralinteractive.tombraider_android.MainActivity
+
+florae:
+  - cat.naval.florae/cat.naval.florae.MainActivity
+
+pixel_station:
+  - com.studios.pixelstation/com.studios.pixelstation.MainActivity
+
+transcriber_for_whatsapp:
+  - it.mirko.transcriber/it.mirko.transcriber.features.history.HistoryActivity
+
+netto_plus:
+  - com.valuephone.vpnetto/de.netto.b2c.FragmentActivity
