--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+turn_off:
+  - space.bm835.pb/space.bm835.pb.TurnOffActivity
+  
+rizline:
+  - com.PigeonGames.Rizline/com.unity3d.player.UnityPlayerActivity
