--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,9 @@ turn_off:
   
 rizline:
   - com.PigeonGames.Rizline/com.unity3d.player.UnityPlayerActivity
+
+deepr:
+  - com.yogeshpaliyal.deepr/com.yogeshpaliyal.deepr.MainActivity
+  
+edge_seek:
+  - lsafer.edgeseek/net.lsafer.edgeseek.app.android.MainActivity
