Add Thunderbird ComponentInfo, Rename broken drawables as alternate icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+thunderbird:
+   - net.thunderbird.android/com.fsck.k9.activity.MainActivity
