--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,15 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+turn_off:
+  - space.bm835.pb/space.bm835.pb.TurnOffActivity
+  
+rizline:
+  - com.PigeonGames.Rizline/com.unity3d.player.UnityPlayerActivity
+
+deepr:
+  - com.yogeshpaliyal.deepr/com.yogeshpaliyal.deepr.MainActivity
+  
+edge_seek:
+  - lsafer.edgeseek/net.lsafer.edgeseek.app.android.MainActivity
