add new icon (#1367)
* project noah icon

* Update icons.yml

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,6 +13,9 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+project_noah:
+  - co.median.android.akawld/co.median.android.LaunchActivity
+  
 turn_off:
   - space.bm835.pb/space.bm835.pb.TurnOffActivity
   
