add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,21 @@ deepr:
   
 edge_seek:
   - lsafer.edgeseek/net.lsafer.edgeseek.app.android.MainActivity
+
+adguard_mail:
+  - com.adguard.email/com.adguard.email.MainActivity
+
+hetzner_robot:
+  - de.hetzner.robot_mobile/com.hetzner.robot.robot_mobile.robot_mobile_3.MainActivity
+
+infomaniak_euria:
+  - com.infomaniak.euria/com.infomaniak.euria.MainActivity
+
+one_plus_game_assistant:
+  - com.oplus.games/com.oplus.assistant.activity.StartActivity
+
+pcvisit_connect:
+  - com.pcvisit.pcvisitconnect/com.pcvisit.pcvisitconnect.MainActivity
+
+premera:
+  - com.premera.android/com.premera.android.screens.splash.SplashActivity
