--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,6 @@ pcvisit_connect:
 
 premera:
   - com.premera.android/com.premera.android.screens.splash.SplashActivity
+
+warframe:
+  - com.digitalextremes.warframenexus/com.digitalextremes.warframenexus.WarframeCompanionActivity
