--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,12 @@ premera:
 
 warframe:
   - com.digitalextremes.warframenexus/com.digitalextremes.warframenexus.WarframeCompanionActivity
+
+arrmatey:
+  - com.dnfapps.arrmatey/com.dnfapps.arrmatey.MainActivity
+
+kai:
+  - com.inspiredandroid.kai/com.inspiredandroid.kai.MainActivity
+
+paperknife:
+  - com.paperknife.app/com.paperknife.app.MainActivity
