--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,6 @@ kai:
 
 paperknife:
   - com.paperknife.app/com.paperknife.app.MainActivity
+
+morphe_manager:
+  - app.morphe.manager/app.morphe.manager.MainActivity_Default
