Add icons&compinfo (#1369)
* add icons, premium requests

* add componentinfo

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,33 @@ deepr:
   
 edge_seek:
   - lsafer.edgeseek/net.lsafer.edgeseek.app.android.MainActivity
+
+adguard_mail:
+  - com.adguard.email/com.adguard.email.MainActivity
+
+hetzner_robot:
+  - de.hetzner.robot_mobile/com.hetzner.robot.robot_mobile.robot_mobile_3.MainActivity
+
+infomaniak_euria:
+  - com.infomaniak.euria/com.infomaniak.euria.MainActivity
+
+one_plus_game_assistant:
+  - com.oplus.games/com.oplus.assistant.activity.StartActivity
+
+pcvisit_connect:
+  - com.pcvisit.pcvisitconnect/com.pcvisit.pcvisitconnect.MainActivity
+
+premera:
+  - com.premera.android/com.premera.android.screens.splash.SplashActivity
+
+arrmatey:
+  - com.dnfapps.arrmatey/com.dnfapps.arrmatey.MainActivity
+
+kai:
+  - com.inspiredandroid.kai/com.inspiredandroid.kai.MainActivity
+
+paperknife:
+  - com.paperknife.app/com.paperknife.app.MainActivity
+
+morphe_manager:
+  - app.morphe.manager/app.morphe.manager.MainActivity_Default
