--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,12 @@ star_wars_kotor2:
 
 sunday_webry:
   - jp.co.shogakukan.sunday_webry/jp.co.shogakukan.sunday_webry.presentation.rootnavigation.RootNavigationActivity
+
+affine:
+  - app.affine.pro/app.affine.pro.MainActivity
+
+hexdroid:
+  - com.boxlabs.hexdroid/com.boxlabs.hexdroid.MainActivity
+
+seerr:
+  - dev.seerr.mobileapp/dev.seerr.mobileapp.MainActivity
