--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,30 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+ea_connect:
+  - com.ea.gp.connect/com.ea.connect.MainActivity
+
+kagi_slop_detective:
+  - com.kagi.slopdetective/com.kagi.slopdetective.MainActivity
+
+lemino:
+  - jp.ne.docomo.lemino.android/jp.ne.docomo.lemino.android.MainActivity
+
+star_wars_kotor:
+  - com.aspyr.swkotor/com.aspyr.kotor.KOTOR
+
+star_wars_kotor2:
+  - com.aspyr.swkotorii/com.aspyr.kotor.StartupActivity
+
+sunday_webry:
+  - jp.co.shogakukan.sunday_webry/jp.co.shogakukan.sunday_webry.presentation.rootnavigation.RootNavigationActivity
+
+affine:
+  - app.affine.pro/app.affine.pro.MainActivity
+
+hexdroid:
+  - com.boxlabs.hexdroid/com.boxlabs.hexdroid.MainActivity
+
+seerr:
+  - dev.seerr.mobileapp/dev.seerr.mobileapp.MainActivity
